Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10068

unsupported syntax of MEMBER keyword (part of Q_PROPERTY())

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 3.0.0-rc1
    • Qt Creator 2.8.1
    • C/C++/Obj-C++ Support
    • None
    • Fedora 19 with Qt 5.1.1, Win 7 x64 Qt 5.1
    • 0e4deaba2356e0baec5d6e65dabf503bf6f7c3bc

    Description

      The MEMBER keyword is new keyword in Q_PROPERTY macro in Qt 5. The MEMBER keyword is wavy underlined in Qt Creator. It shouldn't be. It is a valid Qt 5 code.

      See sample code and attached screenshot.

      class MyClass : public QObject
      {
          Q_OBJECT
          Q_PROPERTY(QString str MEMBER m_str)
      
      public:
          MyClass(QObject *parent = 0);
          ~MyClass();
      
      signals:
      
      private:
          QString m_str;
      
      };
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kosjar Nikolai Kosjar
            xmlich02 Jozef Mlich
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes